<resources>
    <string name="app_name">Logistica</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Iniciar sesión</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="error_invalid_user">Usuario inválido</string>
    <string name="error_invalid_password">Contraseña no válida</string>
    <string name="error_incorrect_password">La contraseña no es correcta</string>
    <string name="error_field_required">Campo necesario</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="no_hay_datos_para_mostrar">No hay datos para mostrar.</string>
    <string name="efectivo">Efectivo: $</string>
    <string name="ctacte">CtaCte: $</string>
    <string name="entrega_total">Entrega total</string>
    <string name="entrega_parcial">Entrega parcial</string>
    <string name="rechazado">Pedido rechazado</string>
    <string name="cerrado">Local cerrado</string>
    <string name="volver_luego">Volver luego</string>
    <string name="refresh">Refrescar</string>
    <string name="error">ERROR</string>
    <string name="connecting">Conectado con el servidor.</string>
    <string name="stream_download_complete">Información descargada con éxito.</string>
    <string name="no_connection">No hay conexión a internet.</string>
    <string name="try_again">Intentar nuevamente</string>
    <string name="download_complete">Descarga completa.</string>
    <string name="parse_started">Incorporando información.</string>
    <string name="codigo_de_cliente">Código de cliente</string>
    <string name="buscar">Buscar</string>
    <string name="finalizar">Finalizar</string>
    <string name="sin_visitar">Sin visitar</string>
    <string name="rechazar_factura_completa">Rechazar factura completa</string>
    <string name="motivo_rechazo_factura">Especifique un motivo de rechazo</string>
    <string name="visitar">VISITAR</string>
    <string name="rechazar">Rechazar</string>
    <string name="cancelar">Cancelar</string>
    <string name="continuar">Continuar</string>
    <string name="efectivo_a_cobrar">Efectivo a cobrar</string>
    <string name="ctacte_a_cobrar">En cuenta corriente</string>
    <string name="simbolo_pesos">$</string>
    <string name="factura_rechazada">RECHAZADO</string>
    <string name="rechazar_todo">Rechazar todo</string>
    <string name="cantidad_rechazada">Cantidad a rechazar</string>
    <string name="cantidad_unidades_rechazada">Unidades a rechazar</string>
    <string name="cantidad_bultos_rechazada">Bultos a rechazar</string>
    <string name="decodificacion_completa">Decodificación completa</string>
    <string name="motivo_rechazo">Motivo rechazo</string>
    <string name="articulo">Articulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="descuento">Descuento</string>
    <string name="cantidad_original">Cantidad en factura</string>
    <string name="bultos_original">Bultos en factura</string>
    <string name="unidades_original">Unidades en factura</string>
    <string name="aceptar">Aceptar</string>
    <string name="descuentos">Descuentos</string>
    <string name="descuento1">Descuento 1</string>
    <string name="descuento2">Descuento 2</string>
    <string name="descuento3">Descuento 3</string>
    <string name="descuento4">Descuento 4</string>
    <string name="estado_de_mercader_a">Estado de mercadería</string>
    <string name="bultos">Bultos</string>
    <string name="total_a_rendir">Total a rendir</string>
    <string name="mercaderia_en_cami_n">Mercaderia en camión</string>
</resources>
