<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_codigoArticulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etCodigoArticulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/articulo"
            android:text="0000000089375"
            tools:ignore="HardcodedText"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/descripcion"
            android:text="CERV SCHNEIDER LATA 6x473 CC"
            tools:ignore="HardcodedText"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="4">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_descuento1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etDescuento1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/descuento1"
                android:inputType="numberDecimal"
                android:text="16.66 %"
                android:textAlignment="center"
                android:visibility="gone"
                tools:ignore="HardcodedText"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_descuento2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etDescuento2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/descuento2"
                android:inputType="numberDecimal"
                android:text="16.66 %"
                android:textAlignment="center"
                android:visibility="gone"
                tools:ignore="HardcodedText"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_descuento3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etDescuento3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/descuento3"
                android:inputType="numberDecimal"
                android:text="16.66 %"
                android:textAlignment="center"
                android:visibility="gone"
                tools:ignore="HardcodedText"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_descuento4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etDescuento4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/descuento4"
                android:inputType="numberDecimal"
                android:text="16.66 %"
                android:textAlignment="center"
                android:visibility="gone"
                tools:ignore="HardcodedText"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_cantidad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etCantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/cantidad_original"
                android:inputType="numberDecimal"
                android:text="1"
                tools:ignore="HardcodedText"/>
        </android.support.design.widget.TextInputLayout>

        <!--<android.support.design.widget.TextInputLayout-->
        <!--android:id="@+id/input_layout_cantidad_rechazada"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1">-->

        <!--<android.support.design.widget.TextInputEditText-->
        <!--android:id="@+id/etCantidadRechazada"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/cantidad_rechazada"-->
        <!--android:inputType="numberDecimal"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:text="0"-->
        <!--tools:ignore="HardcodedText"/>-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantidad_rechazada"
                android:textSize="12sp"/>

            <com.travijuu.numberpicker.library.NumberPicker
                android:id="@+id/etCantidadRechazada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                numberpicker:focusable="true"
                numberpicker:min="0"
                numberpicker:unit="1"
                numberpicker:value="0"/>
        </LinearLayout>
        <!--<NumberPicker-->
        <!--android:id="@+id/etCantidadRechazada"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:orientation="vertical"/>-->
        <!--</android.support.design.widget.TextInputLayout>-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:weightSum="2">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_precio_unitario_final"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPrecioUnitarioFinal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="Precio unitario final"
                android:inputType="numberDecimal"
                android:text="$ 97.412"
                tools:ignore="HardcodedText"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_precio_final"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPrecioFinal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="Precio final"
                android:inputType="numberDecimal"
                android:text="$ 97.412"
                tools:ignore="HardcodedText"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Spinner
        android:id="@+id/spMotivosRechazo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"/>
</LinearLayout>